--- a/pug/index.jade
+++ b/pug/index.jade
@@ -9,9 +9,13 @@ title Букет роз - интернет магазин
 body
 	include header.jade
 	include offer/offer.jade
+	include our-rose.jade
+	include features.jade
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
 	script(src="script/input-arrows.js")
+	script(src="script/more-photos.js")
+	script(src="script/slider.js")
 
 		
 
