--- a/pug/features.jade
+++ b/pug/features.jade
@@ -1,23 +1,24 @@
 .features
 	.slider
-		.left
-		.right
+		.move-slider(data-direction="left")
+		.move-slider(data-direction="right")
 		.slider-container
-			.slider-first
-				h3 Скидки
-				p 
-					| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
-					| При заказе от 7 роз мы предоставляем скидку 10%!
-					| При заказе от 15 роз - доставка бесплатна!
-			.slider-second
-				h3 ВОТ ТАК ДАААА
-				p 
-				| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
-				| При заказе от 7 роз мы предоставляем скидку 10%!
-				| При заказе от 15 роз - доставка бесплатна!
-			.slider-third
-				h3 блаблабл
-				p 
-				| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
-				| При заказе от 7 роз мы предоставляем скидку 10%!
-				| При заказе от 15 роз - доставка бесплатна!
+			.slider-small
+				.slider-item.first
+					h3 Скидки
+					p 
+						| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
+						| При заказе от 7 роз мы предоставляем скидку 10%!
+						| При заказе от 15&nbsp;роз&nbsp;—&nbsp;доставка бесплатна!
+				.slider-item.second
+					h3 слайдер2
+					p 
+						| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
+						| При заказе от 7 роз мы предоставляем скидку 10%!
+						| При заказе от 15 роз — доставка бесплатна!
+				.slider-item.third
+					h3 слайдер3
+					p 
+						| В нашем магазине действует система скидок, чтобы вы могли радовать своих близких большими букетами роз.
+						| При заказе от 7 роз мы предоставляем скидку 10%!
+						| При заказе от 15 роз — доставка бесплатна!
