--- a/pug/index.jade
+++ b/pug/index.jade
@@ -11,6 +11,7 @@ body
 	include offer/offer.jade
 	include our-rose.jade
 	include features.jade
+	include footer.jade
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
 	script(src="script/input-arrows.js")
