--- a/pug/our-rose.jade
+++ b/pug/our-rose.jade
@@ -7,3 +7,12 @@
 	.second-rose
 	.more-rose
 		p Другие фото
+	.more-images
+		.bouquet
+		.bouquet
+		.bouquet
+		.bouquet
+		.bouquet
+		.bouquet
+		.bouquet
+		.bouquet
