--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,6 @@ html {
 
 @import "header/header";
 @import "offer/offer";
-@import "our-rose/our-rose";
+@import "our-rose/our-rose", "our-rose/more-images";
 @import "features/features";
 @import "footer/footer";
