--- a/pug/features.jade
+++ b/pug/features.jade
@@ -1,7 +1,7 @@
 .features
 	.slider
 		.move-slider.disable(data-direction="left")
-		.move-slider.disable(data-direction="right")
+		.move-slider(data-direction="right")
 		.slider-container
 			.slider-small
 				.slider-item.first
