--- a/pug/index.jade
+++ b/pug/index.jade
@@ -6,7 +6,7 @@ head
 	meta(name='viewport', content='width=device-width')
 	
 title Букет роз - интернет магазин
-body
+body(data-popup="")
 	include header.jade
 	include offer/offer.jade
 	include our-rose.jade
