--- a/scss/our-rose/more-images.scss
+++ b/scss/our-rose/more-images.scss
@@ -9,8 +9,10 @@
 	z-index: 99;
 	height: 100vh;
 	width: 100%;
-	background-color: rgba(black, 0.9);
+	background-color: rgba(black, 0.2);
 	transition: 1s;
+	padding-top: 20px;
+	box-sizing: border-box;
 	.bouquet {
 		width: 300px;
 		height: 300px;
@@ -23,5 +25,12 @@
 		.bouquet:nth-of-type(#{$i}) {
 			background:transparent url('../img/our-rose/popup/bouquet#{$i}.jpg') left top/cover no-repeat;
 		}
+	}
+	.zoom-photo {
+		position: absolute;
+		top: 30%;
+		left: 30%;
+		width: 500px;
+		height: 500px;
 	}
 }
