--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,12 @@ html {
   line-height: 1.4;
   font-family: Opensans, sans-serif; }
 
+body[data-popup="popup"] {
+  overflow: hidden;
+  padding-right: 15px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Light.ttf);
@@ -472,6 +478,7 @@ html {
       position: relative; }
 
 .our-rose {
+  position: relative;
   height: 60vh;
   min-width: 800px;
   min-height: 500px;
@@ -536,34 +543,50 @@ html {
 .more-images {
   position: fixed;
   display: none;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-flex-flow: wrap;
   -ms-flex-flow: wrap;
   flex-flow: wrap;
   top: 0;
   left: 0;
   z-index: 99;
-  height: 100vh;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  overflow: scroll;
+  background-color: rgba(0, 0, 0, 0.5);
   -webkit-transition: 1s;
   -o-transition: 1s;
   transition: 1s;
   padding-top: 20px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+  .more-images:after, .more-images:before {
+    z-index: 99;
+    cursor: pointer;
+    content: "";
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    width: 20px;
+    height: 3px;
+    background-color: white;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  .more-images:before {
+    -webkit-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg); }
   .more-images .bouquet {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
-    transition: 0.5s; }
+    transition: 0.5s;
+    margin-bottom: 25px;
+    margin-right: 25px; }
     .more-images .bouquet:hover {
       -webkit-transform: scale(1.05);
       -ms-transform: scale(1.05);
