--- a/css/main.css
+++ b/css/main.css
@@ -586,11 +586,14 @@ body[data-popup="popup"] {
     -o-transition: 0.5s;
     transition: 0.5s;
     margin-bottom: 25px;
-    margin-right: 25px; }
+    margin-right: 25px;
+    border-radius: 10px; }
     .more-images .bouquet:hover {
       -webkit-transform: scale(1.05);
       -ms-transform: scale(1.05);
-      transform: scale(1.05); }
+      transform: scale(1.05);
+      cursor: -webkit-zoom-in;
+      cursor: zoom-in; }
   .more-images .bouquet:nth-of-type(1) {
     background: transparent url("../img/our-rose/popup/bouquet1.jpg") left top/cover no-repeat; }
   .more-images .bouquet:nth-of-type(2) {
@@ -608,11 +611,18 @@ body[data-popup="popup"] {
   .more-images .bouquet:nth-of-type(8) {
     background: transparent url("../img/our-rose/popup/bouquet8.jpg") left top/cover no-repeat; }
   .more-images .zoom-photo {
+    display: inline-block;
+    text-align: center;
     position: absolute;
-    top: 30%;
-    left: 30%;
-    width: 500px;
-    height: 500px; }
+    top: 100px;
+    width: 50%;
+    height: 80%; }
+    .more-images .zoom-photo:hover {
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      transform: scale(1);
+      cursor: -webkit-zoom-out;
+      cursor: zoom-out; }
 
 .features {
   height: 70vh;
