--- a/pug/our-rose.jade
+++ b/pug/our-rose.jade
@@ -8,11 +8,14 @@
 	.more-rose
 		p Другие фото
 	.more-images
-		.bouquet
-		.bouquet
-		.bouquet
-		.bouquet
-		.bouquet
-		.bouquet
-		.bouquet
-		.bouquet
+		.bouquet(data-item="1")
+		.bouquet(data-item="2")
+		.bouquet(data-item="3")
+		.bouquet(data-item="4")
+		.bouquet(data-item="5")
+		.bouquet(data-item="6")
+		.bouquet(data-item="7")
+		.bouquet(data-item="8")
+		.zoom
+			.left
+			.right
