--- a/css/main.css
+++ b/css/main.css
@@ -635,15 +635,15 @@ body[data-popup="popup"] {
       transform: scale(1); }
   .more-images .right,
   .more-images .left {
+    cursor: pointer;
     position: absolute;
-    top: 350px;
-    width: 50px;
-    height: 50px;
-    background-color: green; }
+    width: 300px;
+    height: 700px;
+    background-color: rgba(0, 0, 0, 0.2); }
   .more-images .right {
-    right: -150px; }
+    right: -350px; }
   .more-images .left {
-    left: -150px; }
+    left: -350px; }
 
 .features {
   height: 70vh;
