--- a/scss/our-rose/more-images.scss
+++ b/scss/our-rose/more-images.scss
@@ -75,15 +75,16 @@
 	}
 	.right,
 	.left {
+		cursor: pointer;
 		position: absolute;
-		top: 350px;
-		width: 50px;
-		height: 50px;
-		background-color: green;
+		width: 300px;
+		height: 700px;
+		background-color: rgba(black, 0.2);
+		&:hover {
+
+		}
 	}
-	.right {
-		right: -150px;}
-	.left {
-		left: -150px;}
+	.right { right: -350px; }
+	.left { left: -350px; }
 
 }
