--- a/pug/our-rose.jade
+++ b/pug/our-rose.jade
@@ -5,17 +5,17 @@
 			| Наши розы &mdash; самые лучшие розы, хрустящие, белые и красные!
 	.first-rose
 	.second-rose
-	.more-rose
+	.more-rose(data-gallery="test")
 		p Другие фото
-	.more-images
-		.bouquet(data-item="1")
-		.bouquet(data-item="2")
-		.bouquet(data-item="3")
-		.bouquet(data-item="4")
-		.bouquet(data-item="5")
-		.bouquet(data-item="6")
-		.bouquet(data-item="7")
-		.bouquet(data-item="8")
-		.zoom
-			.left
-			.right
+		.more-images
+			.bouquet(data-item="1")
+			.bouquet(data-item="2")
+			.bouquet(data-item="3")
+			.bouquet(data-item="4")
+			.bouquet(data-item="5")
+			.bouquet(data-item="6")
+			.bouquet(data-item="7")
+			.bouquet(data-item="8")
+			.zoom
+				.left
+				.right
